--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,35 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer base {
+  .btn-gradient-highlight_extra_small {
+    @apply px-2 py-1 rounded-full text-xs text-white
+    bg-linear-to-r from-[#3B82F6] to-[#8B5CF6] cursor-pointer hover:from-[#2563EB] hover:to-[#7C3AED]
+    active:from-[#1D4ED8] active:to-[#6D28D9] active:ring-0 focus:ring-2 focus:ring-[#3B82F6];
+  }
+
+  .btn-gradient-highlight_small {
+    @apply px-2 py-1 rounded-full text-sm text-white
+    bg-linear-to-r from-[#3B82F6] to-[#8B5CF6] cursor-pointer hover:from-[#2563EB] hover:to-[#7C3AED]
+    active:from-[#1D4ED8] active:to-[#6D28D9] active:ring-0 focus:ring-2 focus:ring-[#3B82F6];
+  }
+
+  .btn-gradient-highlight_medium {
+    @apply px-3 py-1.5 rounded-full text-sm text-white
+    bg-linear-to-r from-[#3B82F6] to-[#8B5CF6] cursor-pointer hover:from-[#2563EB] hover:to-[#7C3AED]
+    active:from-[#1D4ED8] active:to-[#6D28D9] active:ring-0 focus:ring-2 focus:ring-[#3B82F6];
+  }
+
+  .btn-gradient-highlight_large {
+    @apply py-2 px-4 rounded-full text-sm text-white
+    bg-linear-to-r from-[#3B82F6] to-[#8B5CF6] cursor-pointer hover:from-[#2563EB] hover:to-[#7C3AED]
+    active:from-[#1D4ED8] active:to-[#6D28D9] active:ring-0 focus:ring-2 focus:ring-[#3B82F6];
+  }
+
+  .btn-gradient-highlight_extra_large {
+    @apply px-5 py-2.5 rounded-full text-base text-white
+    bg-linear-to-r from-[#3B82F6] to-[#8B5CF6] cursor-pointer hover:from-[#2563EB] hover:to-[#7C3AED]
+    active:from-[#1D4ED8] active:to-[#6D28D9] active:ring-0 focus:ring-2 focus:ring-[#3B82F6];
+  }
+}
